Fix an horizontal scroll on the home page due to the fireworks

--- a/public/css/home.less
+++ b/public/css/home.less
@@ -5,7 +5,8 @@
 
 #rg_root {
     height: 100%;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
 
     & > div {
         /* In order to scroll when focusing the search input */
